fixed the login page thing

--- a/ie/daily/login form/index.html
+++ b/ie/daily/login form/index.html
@@ -29,16 +29,16 @@
                 <!-- asking user for email input -->
                 <span class = "inputs"></span>
                     <span class = "inputsf"></span>
+                    <span class = "material-icon icon">Email</span>
                         <input type = "Email" class = "input" placeholder = "Email" />
-                        <span class = "label"> Email </span>
-                        <span class = "material-icon icon">email</span>
+                    <!--  <span class = "label"> Email </span> -->
                 </span>
 
                 <!-- Asking user for password input -->
                 <span class = "inputf">
+                    <span class ="material-icon icon">Password</span>
                     <input type ="password" class ="input" placeholder = "Password">
-                    <span class="label"> Password </span>
-                    <span class ="material-icon icon">lock</span>
+                 <!--   <span class="label"> Password </span> -->
                     </span>
                 </span>
 
